--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,225 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.flipboard.bottomsheet.BottomSheetLayout
+    android:id="@+id/bottomsheet"
+    android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bottomsheet"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-<androidx.core.widget.NestedScrollView
-    android:id="@+id/container1"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/animation_list"
-    android:orientation="vertical"
-   >
+    android:layout_height="match_parent">
 
-        <LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:fitsSystemWindows="true"
+        android:layout_height="@dimen/app_bar_height"
+        android:id="@+id/container1"
+        android:background="@drawable/animation_list"
+        android:layout_width="match_parent"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
+            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:scrollbars="horizontal">
+            app:toolbarId="@+id/toolbar"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="?attr/colorPrimary">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/user_avatar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:cardBackgroundColor="@color/transparent">
+                android:layout_height="match_parent"
+                tools:srcCompat="@mipmap/ic_launcher"
+                app:srcCompat="@mipmap/ic_launcher"
+                android:clickable="true"
+                android:focusable="true" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        >
-                        <ImageView
-                            android:id="@+id/user_avatar"
-                            android:layout_width="350dp"
-                            android:layout_height="200dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            />
-
-
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/avatar_btn"
-                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
-                            android:layout_width="50dp"
-                            android:layout_height="65dp"
-                            android:textColor="@color/black"
-                            app:icon="@android:drawable/ic_menu_camera"
-                            app:layout_constraintBottom_toBottomOf="@id/user_avatar"
-                            app:layout_constraintEnd_toEndOf="@id/user_avatar" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/edit_btn"
-                        style="@style/Widget.MaterialComponents.Button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:text="@string/edit_btn"
-                        />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_height="?attr/actionBarSize"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
+                app:layout_collapseMode="pin"
+                />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Имя"
-                        android:layout_marginStart="4dp"/>
-
-                    <TextView
-                        android:id="@+id/first_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/first_name"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="8dp"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="?android:attr/listDivider" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Фамилия"
-                        android:layout_marginStart="4dp"/>
-
-                    <TextView
-                        android:id="@+id/second_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/second_name"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="8dp"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="?android:attr/listDivider" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="День рождения" />
-
-                    <TextView
-                        android:id="@+id/birth_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="3.08.2088(-69 лет)"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="8dp"/>
+<include layout="@layout/profile_content"/>
 
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="?android:attr/listDivider" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/dialog_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_anchor="@id/container1"
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@android:drawable/ic_dialog_email"/>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="О себе"
-                        android:layout_marginStart="4dp"/>
-
-                    <TextView
-                        android:id="@+id/about"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Я люблю кодить и делать гавно-дизайны, главной своей фмшкой считаю то, что умею пиздить у вк дизайн и считаю это красивым, да я долбоеб и что тут такого, люблю аниме и гей-порно, мой рост 195, вес хуй-знает сколько кг, обожаю говорить Яре-Яре-Дазе (ну и ну) и бить лица своей платиновой звездой, ЯРЕ ЯРЕ ДАЗЕ"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="8dp"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="8dp"
-                        android:background="?android:attr/listDivider" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Изучает"
-                        android:layout_marginStart="4dp"/>
-
-                    <ListView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        >
-
-                    </ListView>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="?android:attr/listDivider" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Родной"
-                        android:layout_marginStart="4dp"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="8dp"
-                        android:background="?android:attr/listDivider" />
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 </com.flipboard.bottomsheet.BottomSheetLayout>
